--- a/.github/workflows/kiran-code_piat.yml
+++ b/.github/workflows/kiran-code_piat.yml
@@ -1,37 +1,61 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
+# Workflow to build and deploy Person-Identification-and-Tracking app to Azure Web App
 
-name: Build and deploy Node.js app to Azure Web App - piat
+name: Build and Deploy Person-Identification-and-Tracking App
 
 on:
   push:
     branches:
+      - main
       - kiran-code
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      # Checkout the code
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-      - name: Set up Node.js version
+      # Frontend (client)
+      - name: Set up Node.js for Frontend
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
+          node-version: 20.x
 
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
-      
-      - name: Upload artifact for deployment job
+      - name: Install Frontend Dependencies
+        working-directory: ./client
+        run: npm install
+
+      - name: Build Frontend
+        working-directory: ./client
+        run: npm run build
+
+      - name: Upload Frontend Build Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
-          path: .
+          name: frontend-build
+          path: ./client/build
+
+      # Backend (src)
+      - name: Set up Python for Backend
+        uses: actions/setup-python@v3
+        with:
+          python-version: 3.9
+
+      - name: Install Backend Dependencies
+        working-directory: ./src
+        run: |
+          python -m venv venv
+          source venv/bin/activate
+          pip install -r requirements.txt
+
+      - name: Upload Backend Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: backend-src
+          path: ./src
 
   deploy:
     runs-on: ubuntu-latest
@@ -40,14 +64,21 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write
 
     steps:
-      - name: Download artifact from build job
+      # Download frontend and backend artifacts
+      - name: Download Frontend Artifact
         uses: actions/download-artifact@v4
         with:
-          name: node-app
-      
+          name: frontend-build
+
+      - name: Download Backend Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: backend-src
+
+      # Login to Azure
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -55,11 +86,19 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_F838B78C58D947B59D121FB0C746B670 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_1BDBD5A859CE4AA8ACBC2E550721A74C }}
 
-      - name: 'Deploy to Azure Web App'
+      # Deploy to Azure Web App
+      - name: Deploy Frontend to Azure Web App
         uses: azure/webapps-deploy@v3
-        id: deploy-to-webapp
+        id: deploy-frontend
         with:
-          app-name: 'piat'
+          app-name: 'piat-client'
           slot-name: 'Production'
-          package: .
-          
+          package: ./client/build
+
+      - name: Deploy Backend to Azure Web App
+        uses: azure/webapps-deploy@v3
+        id: deploy-backend
+        with:
+          app-name: 'piat-backend'
+          slot-name: 'Production'
+          package: ./src
